# med-boxz

./: README.md  pyproject.toml  requirements.txt
src/: API handler.py  backend.py  main.py  migrations.py
src/webpage/: payment_page.html
